--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "995cfd0d-a30b-4d59-a60e-4284e656d9b4"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
